# qtConsole-external-project

./: CMakeLists.txt
qtConsole/: CMakeLists.txt  CMakeLists.txt.in
